// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Adapter processes app request and dependency as spans 1`] = `Array []`;

exports[`Adapter processes app request and dependency as spans 2`] = `
Array [
  Span {
    "attributes": Object {
      "AppRoleInstance": "very long id string",
      "AppRoleName": "functionAppName goes here",
      "Category": "Host.Results",
      "ClientCity": "Portland",
      "ClientCountryOrRegion": "United States",
      "ClientIP": "0.0.0.0",
      "ClientStateOrProvince": "Oregon",
      "ClientType": "PC",
      "FullName": "Functions.{function name}",
      "FunctionExecutionTimeMs": "4.7239",
      "HostInstanceId": "hostInstanceIdValue",
      "InvocationId": "invocationIdValue",
      "ItemCount": 1,
      "LogLevel": "Information",
      "PerformanceBucket": "<250ms",
      "ProcessId": "8912",
      "ResourceGUID": "resourceGuid",
      "SDKVersion": "azurefunctions: 3.0.15571.0",
      "Success": true,
      "TriggerReason": "This function was programmatically called via the host APIs.",
      "_BilledSize": 1082,
      "duration.ms": 9.1593,
      "http.method": "GET",
      "http.path": "/api/{function name goes here}",
      "http.responseCode": "200",
      "http.url": "https://{function app name}.azurewebsites.net/api/{function name}",
      "log.type": "AppRequests",
      "name": "{function name}",
      "resourceId": "/SUBSCRIPTIONS/subscriptionID goes here/RESOURCEGROUPS/resource group goes here/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name}",
      "service.name": "{function name}",
    },
    "id": "09d760d34d75e847",
    "timestamp": 1619736074123,
    "trace.id": "12345",
  },
]
`;

exports[`Adapter processes app request and dependency as spans 3`] = `
Array [
  Span {
    "attributes": Object {
      "AppRoleInstance": "very long id string",
      "AppRoleName": "functionAppName goes here",
      "Category": "Host.Results",
      "ClientCity": "Portland",
      "ClientCountryOrRegion": "United States",
      "ClientIP": "0.0.0.0",
      "ClientStateOrProvince": "Oregon",
      "ClientType": "PC",
      "FullName": "Functions.{function name}",
      "FunctionExecutionTimeMs": "4.7239",
      "HostInstanceId": "hostInstanceIdValue",
      "InvocationId": "invocationIdValue",
      "ItemCount": 1,
      "LogLevel": "Information",
      "PerformanceBucket": "<250ms",
      "ProcessId": "8912",
      "ResourceGUID": "resourceGuid",
      "SDKVersion": "azurefunctions: 3.0.15571.0",
      "Success": true,
      "TriggerReason": "This function was programmatically called via the host APIs.",
      "_BilledSize": 1082,
      "duration.ms": 9.1593,
      "http.method": "GET",
      "http.path": "/api/{function name goes here}",
      "http.responseCode": "200",
      "http.url": "https://{function app name}.azurewebsites.net/api/{function name}",
      "log.type": "AppRequests",
      "name": "{function name}",
      "resourceId": "/SUBSCRIPTIONS/subscriptionID goes here/RESOURCEGROUPS/resource group goes here/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name}",
      "service.name": "{function name}",
    },
    "id": "09d760d34d75e847",
    "timestamp": 1619736074123,
    "trace.id": "12345",
  },
  Span {
    "attributes": Object {
      "AppRoleInstance": "{role instance id}",
      "AppRoleName": "Web",
      "ClientCity": "San Jose",
      "ClientCountryOrRegion": "United States",
      "ClientIP": "0.0.0.0",
      "ClientOS": "Windows_NT 10.0.14393",
      "ClientStateOrProvince": "California",
      "ClientType": "PC",
      "ItemCount": 1,
      "PerformanceBucket": "<250ms",
      "ResourceGUID": "{resource uuid4}",
      "SDKVersion": "node:1.8.10",
      "Success": true,
      "_BilledSize": 786,
      "dependency.type": "{dependencyTypeName property of client.trackDependency}",
      "duration.ms": 231,
      "http.target": "{target property of client.trackDependency}",
      "log.type": "AppDependencies",
      "name": "{name property of client.trackDependency}",
      "parent.id": "12345",
      "resourceId": "/SUBSCRIPTIONS/{subscription id}/RESOURCEGROUPS/{resource group in all caps}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name in all caps}",
    },
    "id": "{id value}",
    "timestamp": 1620165670940,
    "trace.id": "67890",
  },
]
`;
